# real-time-ml-system

./: README.md
docker-compose/: Makefile
services/trade_producer/: .sample.env  Dockerfile  Makefile  pyproject.toml
services/trade_producer/src/: config.py  kraken_api.py  main.py
services/trade_to_ohlc/: pyproject.toml
services/trade_to_ohlc/src/: main.py
